src/test/deca/context/invalid/unknown_return.deca
// Description:
//  Programme returun qqchose d inconnue 
//
// Resultats:
//erreur
//
//
// Historique:
//    cree le 07/01/2025

{   
   return x;

}